ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.5.5
    • Affects Version/s: None
    • Component/s: Querying
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Seems like certain $ projections will crash the server when run against current master. Note that there is no output indicating any issue in the mongod logs.

      > db.test.find({$or: [{b: 1}]})
      >
      > db.test.find({$or: [{b: 1}]}, {"arrayField.$": 1})
      2014-01-21T15:06:35.861-0800 DBClientCursor::init call() failed
      Error: error doing query: failed
      2014-01-21T15:06:35.863-0800 trying reconnect to 127.0.0.1:27017 (127.0.0.1) failed
      2014-01-21T15:06:35.863-0800 warning: Failed to connect to 127.0.0.1:27017, reason: errno:61 Connection refused
      2014-01-21T15:06:35.863-0800 reconnect 127.0.0.1:27017 (127.0.0.1) failed failed couldn't connect to server 127.0.0.1:27017 (127.0.0.1), connection attempt failed
      

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Andrew Emil (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: