SERVER-12424 fixed pointer to deleted match expression issue in init().