src/mongo/db/query/canonical_query_test.cpp
@@ -365,6 +365,10 @@ namespace {
         testGetPlanCacheKey("{}", "{}", "{a: 'foo'}", "anp\"foo\"a");
         testGetPlanCacheKey("{}", "{}", "{a: {$slice: [3, 5]}}", "anp{ $slice: [ 3, 5 ] }a");
         testGetPlanCacheKey("{}", "{}", "{a: {$elemMatch: {x: 2}}}", "anp{ $elemMatch: { x: 2 } }a");
+        testGetPlanCacheKey("{a: 1}", "{}", "{'a.$': 1}", "eqap1a.$");
+        // With or-elimination and projection
+        testGetPlanCacheKey("{$or: [{a: 1}]}", "{}", "{_id: 0, a: 1}", "eqap0_id1a");
+        testGetPlanCacheKey("{$or: [{a: 1}]}", "{}", "{'a.$': 1}", "eqap1a.$");
     }
 
 }
